--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "fetch-jsonp": "^1.1.3",
+    "mongodb": "^3.0.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1"
