--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "es6-promise": "^4.2.4",
     "fetch-jsonp": "^1.1.3",
     "mongodb": "^3.0.10",
     "react": "^16.3.2",
